[gd_scene load_steps=7 format=2]

[ext_resource path="res://media/bullet2.png" type="Texture" id=1]
[ext_resource path="res://entities/bullet.gd" type="Script" id=2]
[ext_resource path="res://entities/Audio.gd" type="Script" id=3]
[ext_resource path="res://media/bullet_shadow.png" type="Texture" id=4]
[ext_resource path="res://entities/bullet-Area2Dbullshit.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5, 1 )

[node name="bullet" type="KinematicBody2D" groups=[
"bullet",
]]
collision_layer = 8
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="BulletArea2D" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="Col2D" type="CollisionShape2D" parent="BulletArea2D"]
shape = SubResource( 1 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
script = ExtResource( 3 )

[connection signal="body_entered" from="BulletArea2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="BulletArea2D" to="." method="_on_Area2D_body_exited"]
